--- a/leyou-parent/leyou-goods-web/src/main/resources/templates/item.html
+++ b/leyou-parent/leyou-goods-web/src/main/resources/templates/item.html
@@ -231,17 +231,18 @@
                             <div class="fl title">
                                 <div class="control-group">
                                     <div class="controls">
-                                        <input autocomplete="off" type="text" disabled value="1" minnum="1"
+                                        <input autocomplete="off" type="text" v-model="num" disabled value="1"
+                                               minnum="1"
                                                class="itxt"/>
-                                        <a href="javascript:void(0)" class="increment plus">+</a>
-                                        <a href="javascript:void(0)" class="increment mins">-</a>
+                                        <a href="javascript:void(0)" @click="increment()" class="increment plus">+</a>
+                                        <a href="javascript:void(0)" @click="decrement()" class="increment mins">-</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="fl">
                                 <ul class="btn-choose unstyled">
                                     <li>
-                                        <a href="success-cart.html" target="_blank"
+                                        <a href="javascript:void(0)" @click="addCart()"
                                            class="sui-btn  btn-danger addshopcar">加入购物车</a>
                                     </li>
                                 </ul>
@@ -654,7 +655,8 @@
             specialSpec: specialSpec,
             ly: ly,
             indexes: indexes,
-            genericSpec: genericSpec
+            genericSpec: genericSpec,
+            num: 1
         },
         components: {
             lyTop: function () {
@@ -686,6 +688,56 @@
                 return groups;
             }
 
+        },
+        methods: {
+            increment() {
+                this.num++;
+            },
+            decrement() {
+                this.num > 1 && this.num--;
+            },
+            addCart() {
+                ly.verifyUser().then(res => {
+                    // 已登录发送信息到后台，保存到redis中
+                    ly.http.post("/cart", {skuId: this.sku.id, num: this.num}).then(res => {
+                        location.href = "http://www.leyou.com/cart.html";
+                    })
+                }).catch(() => {
+                    // 未登录保存在浏览器本地的localStorage中
+                    //1. 获取localStorage中的购物车
+                    let carts = ly.store.get("carts") || [];
+                    //2. 查看当前商品在购物车中是否已经存在
+                    let cart = carts.find(c => c.skuId === this.sku.id);
+                    if (cart) {
+                        // 3、存在更新数量
+                        cart.num += this.num;
+                    } else {
+                        // 4、不存在，新增
+
+                        //将规格参数专为k，v
+                        let ownSpec = JSON.parse(this.sku.ownSpec);
+                        let temp = {};
+                        for (let k in paramMap) {
+                            temp[paramMap[k]] = ownSpec[k];
+                        }
+                        cart = {
+                            skuId: this.sku.id,
+                            title: this.sku.title,
+                            price: this.sku.price,
+                            image: this.images[0],
+                            num: this.num,
+                            ownSpec: temp
+                        };
+                        //添加到购物车中
+                        carts.push(cart);
+                    }
+
+                    // 把carts写回localstorage
+                    ly.store.set("carts", carts);
+                    // 跳转到购物车页面
+                    location.href = "http://www.leyou.com/cart.html";
+                })
+            }
         }
     });
 </script>
